ISSUE: BugID: 493 PURPOSE: Update vendor branch to Specify 6.3, revision 9721 from sourceforge. DESCRIPTION: Exported revision 9721, then used svn_load_dirs to load into repository on watson.  Left all file adds/removes as such, didn't try to tag any as renames.